# entangle

./: .gitignore  .mailmap  AUTHORS  AUTHORS.in  Makefile.am  NEWS  README  acinclude.m4  autobuild.sh  autogen.sh  capa.spec.in  cfg.mk  configure.ac  entangle.spec.in  git.mk  maint.mk
.tx/: config
docs/: Makefile.am  README  canon-settings.txt  cap-mockupo.ep  entangle-mockup.ep  nikon-settings.txt  release-naming.txt
docs/man/: Makefile.am
docs/man/en/: Makefile.am  entangle.pod
docs/reference/: Capa-docs.sgml  Capa-sections.txt  Capa.types  Entangle-docs.xml  Entangle-sections.txt  Entangle.types  Makefile.am
docs/website/: Makefile.am  bugs.html.in  communicate.html.in  documentation.html.in  download.html.in  faq.html.in  index.css  index.html.in  manual.html.in  navigation.html  page.html  scm.html.in  screenshots.html.in  todo.html.in
help/: Makefile.am
help/C/: camera-focusing.page  camera-settings.page  image-capture.page  image-preview.page  image-storage.page  index.page  introduction.page  multiple-cameras.page  plugin-management.page  plugin-photobox.page  plugin-shooter.page
m4/: entangle-compile-warnings.m4  manywarnings.m4  warnings.m4
po/: LINGUAS  POTFILES.in  README.I18N  ach.po  af.po  af_ZA.po  aln.po  am.po  anp.po  ar.po  as.po  ast.po  az.po  bal.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  brx.po  bs.po  ca.po  cs.po  cs_CZ.po  cy.po  da.po  de.po  de_CH.po  dz.po  el.po  en_GB.po  en_US.po  entangle.pot  eo.po  es.po  es_ES.po  et.po  eu.po  eu_ES.po  (+92 more)
src/: GPhoto-2.0.gir  Makefile  Makefile.am  app-display.c  app-display.h  app.c  app.h  camera-info.c  camera-info.h  camera-list.c  camera-list.h  camera-manager.c  camera-manager.h  camera-picker.c  camera-picker.h  camera.c  camera.h  capa-main.c  capa.desktop.in  capa.glade  control-group.c  control-layout.c  control-layout.h  control.c  control.h  entangle-main.c  entangle.appdata.xml  entangle.appdata.xml.in  entangle.desktop.in  entangle.glade  gphoto-2.0.gir  internal.h  javascript.cfg  main.c  org.entangle-photo.manager.gschema.xml  params.c  params.h  sRGB.icc
src/backend/: app.c  app.h  camera-list.c  camera-list.h  camera.c  camera.h  capa-app.c  capa-app.h  capa-camera-file.c  capa-camera-file.h  capa-camera-list.c  capa-camera-list.h  capa-camera-scheduler.c  capa-camera-scheduler.h  capa-camera-task-capture.c  capa-camera-task-capture.h  capa-camera-task-monitor.c  capa-camera-task-monitor.h  capa-camera-task-preview.c  capa-camera-task-preview.h  capa-camera-task.c  capa-camera-task.h  capa-camera.c  capa-camera.h  capa-colour-profile.c  capa-colour-profile.h  capa-config-entry.c  capa-config-entry.h  capa-config-set.c  capa-config-set.h  capa-config-store-gconf.c  capa-config-store-gconf.h  capa-config-store.c  capa-config-store.h  capa-control-button.c  capa-control-button.h  capa-control-choice.c  capa-control-choice.h  capa-control-date.c  capa-control-date.h  (+176 more)
src/frontend/: app-display.c  app-display.h  camera-info.c  camera-info.h  camera-manager.c  camera-manager.h  camera-picker.c  camera-picker.h  camera-progress.c  camera-progress.h  capa-app-display.c  capa-app-display.h  capa-camera-info.c  capa-camera-info.h  capa-camera-manager.c  capa-camera-manager.h  capa-camera-picker.c  capa-camera-picker.h  capa-control-panel.c  capa-control-panel.h  capa-help-about.c  capa-help-about.h  capa-image-display.c  capa-image-display.h  capa-image-polaroid.c  capa-image-polaroid.h  capa-preferences-display.c  capa-preferences-display.h  capa-session-browser.c  capa-session-browser.h  control-panel.c  control-panel.h  entangle-app-display.c  entangle-app-display.h  entangle-application.c  entangle-application.h  entangle-auto-drawer.c  entangle-auto-drawer.h  entangle-camera-info.c  entangle-camera-info.h  (+65 more)
src/frontend/view/: autoDrawer.c  drawer.c  ovBox.c
src/icons/: Makefile.am
src/icons/128x128/actions/: Makefile.am
src/icons/16x16/actions/: Makefile.am
src/icons/22x22/: Makefile.am
src/icons/22x22/actions/: Makefile.am
src/icons/32x32/actions/: Makefile.am
src/icons/48x48/: Makefile.am
src/icons/48x48/actions/: Makefile.am
src/icons/64x64/actions/: Makefile.am
src/plugins/: Makefile.am
src/plugins/photobox/: Makefile.am  org.entangle-photo.plugins.photobox.gschema.xml  photobox.plugin  photobox.py
src/plugins/shooter/: Makefile.am  org.entangle-photo.plugins.shooter.gschema.xml  shooter.plugin  shooter.py
