@YELP_HELP_RULES@

HELP_ID = entangle

HELP_MEDIA = figures/entangle.png

HELP_FILES = \
	camera-focusing.page \
	image-capture.page \
	image-preview.page \
	image-storage.page \
	index.page \
	introduction.page \
	legal.xml \
	plugin-management.page \
	plugin-photobox.page \
	$(NULL)

HELP_LINGUAS =

check-local ::
	yelp-check validate $(srcdir)/C
